# phd-jonathan-thaler

./: ABM_NB_WITH_CSV_PLOT.md  BM1.hs  SIR ABM .ipynb  SIR ABM .md  SIR-Dunai.cabal  SIRABM.bib  SIRABM.lhs  SIRHelpers.hs  answer.tex  answerPiccies.tex  arrOperator.tex  functionAsArrow.tex  myFile.csv  myNix.nix  shell.nix
public/purefunctionalepidemics/code/SIR_Dunai/src/: Main.hs
src/: Main.hs
