name:                SIR-Dunai
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jonathan Thaler
maintainer:          thaler.jonathan@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable SIR-Dunai
  main-is:             Main.hs
  build-depends:        base
                      , bearriver
                      , dunai
                      , MonadRandom
                      , containers
                      , mtl
                      , gloss
                      , array
                      , vector
                      , cassava
                      , bytestring
                      , plots
                      , ihaskell-juicypixels
                      , ihaskell-diagrams
                      , diagrams-core
                      , diagrams-lib
                      , diagrams-cairo
                      , lens
                      , gloss-export

  hs-source-dirs:       .
                      , src

  default-language:    Haskell2010
  ghc-options:         -Wall